--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Fringes-GUI"
-version = "0.1.4"
+version = "0.2.0"
 description = "Graphical user interface for the 'fringes' package."
 license = "CC-BY-NC-SA-4.0"
 authors = ["Christian Kludt"]
@@ -10,7 +10,8 @@ keywords = ["phase shifting", "fringe analysis", "fringe projection", "deflectom
 
 [tool.poetry.dependencies]
 python = "^3.10,<3.13"
-fringes = "^0.2.1, <0.2.2"
+# fringes = "^0.2.1, <0.2.2"
+fringes = {path = "../fringes", develop = true}
 pyqt6 = "^6.4.2"
 pyqtgraph = "^0.13.2"
 opencv-contrib-python = "^4.7.0"
