--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,18 @@
 [tool.poetry]
 name = "Fringes-GUI"
-version = "0.1.4"
+version = "0.1.5"
 description = "Graphical user interface for the 'fringes' package."
 license = "CC-BY-NC-SA-4.0"
 authors = ["Christian Kludt"]
 readme = "README.md"
 repository = "https://github.com/comimag/fringes-gui"
+documentation = "https://fringes.readthedocs.io/en/latest/getting_started/usage.html#graphical-user-interface"
 keywords = ["phase shifting", "fringe analysis", "fringe projection", "deflectometry", "computational imaging"]
 
 [tool.poetry.dependencies]
 python = "^3.10,<3.12"
-# fringes = "^0.1.7"
-fringes = {path = "../fringes", develop = true}
+fringes = "^0.2.1,<0.2.2"
+# fringes = {path = "../fringes", develop = true}
 pyqt6 = "^6.4.2"
 pyqtgraph = "^0.13.2"
 opencv-contrib-python = "^4.7.0"
