--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ opencv-contrib-python = "^4.7.0"
 asdf = "^3.0.1"
 h5py = "^3.9.0"
 toml = "^0.10.2"
-fringes = ">=1.1.0, <1.1.1"  # todo: check versions
+fringes = "~1.1"  # todo: check versions
 # fringes = {path = "../fringes", develop = true}
 
 [tool.poetry.group.dev.dependencies]
